<resources>
    <string name="app_name">The Bread Co.</string>
    <string name="open">Open</string>
    <string name="close">Close</string>
    <string name="menu">Menu</string>
    <string name="recipes">Recipes</string>
    <string name="contact">Contact</string>
    <string name="ingredients">Ingredients</string>
    <string name="menu_header">Sourdough Chronicles</string>
    <string name="settings">Settings</string>
    <string name="title_activity_settings">SettingsActivity</string>
    <string name="copyright">2021 Segel Jacob</string>
    <string name="instagramPage">https://www.instagram.com/sourdough_chronicles/</string>
    <string name="facebookPage">https://www.facebook.com/sourdoughchronicles</string>
    <string name="notification_text">Connectivity to the internet is back!</string>

    <!-- Preference Titles -->
    <string name="units_header">Units</string>
    <string name="theme_header">Theme</string>

    <!-- Messages Preferences -->
    <string name="unit_title">Default unit</string>

    <!-- Sync Preferences -->
    <string name="theme_title">Switch to Dark Theme</string>
    <string name="theme_summary_on">Switch back to light theme
    </string>
    <string name="theme_summary_off">Switch to dark theme</string>
</resources>