<PreferenceScreen xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto">

    <PreferenceCategory app:title="@string/units_header">

        <ListPreference
            app:defaultValue="false"
            app:entries="@array/reply_entries"
            app:entryValues="@array/unit_values"
            app:key="unit"
            app:title="@string/unit_title"
            app:useSimpleSummaryProvider="true" />

    </PreferenceCategory>

    <PreferenceCategory app:title="@string/theme_header">

        <SwitchPreferenceCompat
            android:summaryOff="@string/theme_summary_off"
            app:key="darkTheme"
            app:summaryOn="@string/theme_summary_on"
            app:title="@string/theme_title" />

    </PreferenceCategory>

</PreferenceScreen>